update cv, pubs, courses, news

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,23 +1,54 @@
 ---
 ---
 
-@article{malik2024flying,
+@article{shekarforoush2024improving,
+  title={Improving Ab-Initio Cryo-EM Reconstruction with Semi-Amortized Pose Inference},
+  author={Shekarforoush, Shayan and Lindell, David B and Brubaker, Marcus A and Fleet, David J},
+  journal={arXiv preprint arXiv:2406.10455},
+  year={2024},
+  thumbnail={arxiv2024shekarforoush.png},
+  pdf={https://arxiv.org/abs/2406.10455}
+}
+
+@article{bahmani2024vd3d,
+  title={VD3D: Taming Large Video Diffusion Transformers for 3D Camera Control},
+  author={Bahmani, Sherwin and Skorokhodov, Ivan and Siarohin, Aliaksandr and Menapace, Willi and Qian, Guocheng and Vasilkovsky, Michael and Lee, Hsin-Ying and Wang, Chaoyang and Zou, Jiaxu and Tagliasacchi, Andrea and Lindell, David B and Tulyakov, Sergey},
+  journal={arXiv preprint arXiv:2407.12781},
+  year={2024},
+  thumbnail={arxiv2024bahmani-2.gif},
+  pdf={https://arxiv.org/abs/2407.12781},
+  html={https://snap-research.github.io/vd3d/},
+}
+
+@article{mirdehghan2024coherent,
   abbr={arXiv},
+  title={Coherent Optical Modems for Full-Wavefield Lidar},
+  author={Mirdehghan, Parsa and Buscaino, Brandon and Wu, Maxx and Charlton, Doug and Mousa-Pasandi, Mohammad E and Kutulakos, Kiriakos N and Lindell, David B},
+  journal={arXiv preprint arXiv:2406.08439},
+  year={2024},
+  thumbnail={arxiv2024mirdehghan.png},
+  pdf={https://arxiv.org/abs/2406.08439}
+}
+
+@inproceedings{malik2024flying,
+  abbr={ECCV},
   title={Flying With Photons: Rendering Novel Views of Propagating Light},
   author={Malik, Anagh and Juravsky, Noah and Po, Ryan and Wetzstein, Gordon and Kutulakos, Kiriakos N and Lindell, David B},
-  journal={arXiv preprint arXiv:2404.06493},
+  booktitle={ECCV},
   year={2024},
   thumbnail={arxiv2024malik.gif},
   pdf={http://arxiv.org/abs/2404.06493},
   html={https://anaghmalik.com/FlyingWithPhotons/},
-  code={https://github.com/anaghmalik/FlyingWithPhotons}
+  code={https://github.com/anaghmalik/FlyingWithPhotons},
+  note={Oral Presentation},
+  selected={true}
 }
 
-@article{bahmani2024tc4d,
-  abbr={arXiv},
+@inproceedings{bahmani2024tc4d,
+  abbr={ECCV},
   title={{TC4D}: Trajectory-Conditioned Text-to-{4D} Generation},
   author={Bahmani, Sherwin and Liu, Xian and Wang, Yifan and Skorokhodov, Ivan and Rong, Victor and Liu, Ziwei and Liu, Xihui and Park, Jeong Joon and Tulyakov, Sergey and Wetzstein, Gordon and Tagliasacchi, Andrea and Lindell, David B},
-  journal={arXiv preprint arXiv:2403.17920},
+  booktitle={ECCV},
   year={2024},
   thumbnail={arxiv2024bahmani.gif},
   pdf={https://arxiv.org/abs/2403.17920},
@@ -34,7 +65,29 @@
   thumbnail={arxiv2023bahmani.gif},
   pdf={https://arxiv.org/abs/2311.17984},
   html={https://sherwinbahmani.github.io/4dfy/},
-  code={https://github.com/sherwinbahmani/4dfy}
+  code={https://github.com/sherwinbahmani/4dfy},
+  selected={true}
+}
+
+@inproceedings{yin2024sce,
+  title={{SCE-MAE}: Selective Correspondence Enhancement with Masked Autoencoder for Self-Supervised Landmark Estimation},
+  author={Yin, Kejia and Rao, Varshanth and Jiang, Ruowei and Liu, Xudong and Aarabi, Parham and Lindell, David B},
+  booktitle={CVPR},
+  year={2024},
+  abbr={CVPR},
+  thumbnail={cvpr2024yin.png},
+  pdf={https://openaccess.thecvf.com/content/CVPR2024/papers/Yin_SCE-MAE_Selective_Correspondence_Enhancement_with_Masked_Autoencoder_for_Self-Supervised_Landmark_CVPR_2024_paper.pdf}
+}
+
+@inproceedings{mirdehghan2024turbosl,
+  title={{TurboSL}: Dense, Accurate and Fast {3D} by Neural Inverse Structured Light},
+  author={Mirdehghan, Parsa and Wu, Maxx and Chen, Wenzheng and Lindell, David B and Kutulakos, Kiriakos N},
+  booktitle={CVPR},
+  year={2024},
+  abbr={CVPR},
+  thumbnail={cvpr2024mirdehghan.png},
+  pdf={https://openaccess.thecvf.com/content/CVPR2024/papers/Mirdehghan_TurboSL_Dense_Accurate_and_Fast_3D_by_Neural_Inverse_Structured_CVPR_2024_paper.pdf},
+  html={https://www.dgp.toronto.edu/turbosl/}
 }
 
 @article{lin2023learning,
@@ -75,7 +128,7 @@
   pdf={https://arxiv.org/abs/2307.09555},
   html={https://anaghmalik.com/TransientNeRF/},
   video={https://www.youtube.com/watch?v=m1sc4-h7ma8},
-  selected={true}
+  selected={false}
 }
 
 @article{shentu2023moss,
