--- a/_posts/2022-12-01-csc420.markdown
+++ b/_posts/2022-12-01-csc420.markdown
@@ -1,13 +1,10 @@
 ---
 title: "CSC420: Introduction to Image Understanding"
-date: 2023-1-01
+date: 2023-01-01
 thumbnail: csc420-winter2223.png
-permalink: https://www.cs.toronto.edu/~lindell/teaching/420/
+permalink: https://www.cs.toronto.edu/~lindell/teaching/420/2023
 alt: image-alt
 iscourse: true
 term: Winter 2023
 
 ---
-
-An undergraduate course that introduces fundamental concepts in image understanding, as well as theory and methods used to try to make computers "see".
-{: style="text-align: left;" }
