--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,14 +20,15 @@
   html={https://snap-research.github.io/vd3d/},
 }
 
-@article{mirdehghan2024coherent,
-  abbr={arXiv},
+@inproceedings{mirdehghan2024coherent,
+  abbr={SIGGRAPH Asia},
   title={Coherent Optical Modems for Full-Wavefield Lidar},
   author={Mirdehghan, Parsa and Buscaino, Brandon and Wu, Maxx and Charlton, Doug and Mousa-Pasandi, Mohammad E and Kutulakos, Kiriakos N and Lindell, David B},
-  journal={arXiv preprint arXiv:2406.08439},
+  booktitle={SIGGRAPH Asia},
   year={2024},
   thumbnail={arxiv2024mirdehghan.png},
-  pdf={https://arxiv.org/abs/2406.08439}
+  pdf={https://arxiv.org/abs/2406.08439},
+  selected={true}
 }
 
 @inproceedings{malik2024flying,
@@ -236,7 +237,6 @@ html={acorn},
 video={https://www.youtube.com/watch?v=P192X3J6cg4},
 code={https://github.com/computational-imaging/acorn},
 pdf={https://arxiv.org/abs/2105.02788},
-selected={true}
 }
 
 @inproceedings{lindell2021autoint,
