--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,25 +1,6 @@
 ---
 ---
 
-@article{shekarforoush2024improving,
-  title={Improving Ab-Initio Cryo-EM Reconstruction with Semi-Amortized Pose Inference},
-  author={Shekarforoush, Shayan and Lindell, David B and Brubaker, Marcus A and Fleet, David J},
-  journal={arXiv preprint arXiv:2406.10455},
-  year={2024},
-  thumbnail={arxiv2024shekarforoush.png},
-  pdf={https://arxiv.org/abs/2406.10455}
-}
-
-@article{bahmani2024vd3d,
-  title={VD3D: Taming Large Video Diffusion Transformers for 3D Camera Control},
-  author={Bahmani, Sherwin and Skorokhodov, Ivan and Siarohin, Aliaksandr and Menapace, Willi and Qian, Guocheng and Vasilkovsky, Michael and Lee, Hsin-Ying and Wang, Chaoyang and Zou, Jiaxu and Tagliasacchi, Andrea and Lindell, David B and Tulyakov, Sergey},
-  journal={arXiv preprint arXiv:2407.12781},
-  year={2024},
-  thumbnail={arxiv2024bahmani-2.gif},
-  pdf={https://arxiv.org/abs/2407.12781},
-  html={https://snap-research.github.io/vd3d/},
-}
-
 @inproceedings{mirdehghan2024coherent,
   abbr={SIGGRAPH Asia},
   title={Coherent Optical Modems for Full-Wavefield Lidar},
@@ -27,6 +8,7 @@
   booktitle={SIGGRAPH Asia},
   year={2024},
   thumbnail={arxiv2024mirdehghan.png},
+  html={https://www.dgp.toronto.edu/fullwavefieldlidar},
   pdf={https://arxiv.org/abs/2406.08439},
   selected={true}
 }
@@ -56,6 +38,91 @@
   html={https://sherwinbahmani.github.io/tc4d/},
   code={https://github.com/sherwinbahmani/tc4d}
 }
+
+
+@article{namekata2024sg,
+  title={{SG-I2V}: Self-guided trajectory control in image-to-video generation},
+  author={Namekata, Koichi and Bahmani, Sherwin and Wu, Ziyi and Kant, Yash and Gilitschenski, Igor and Lindell, David B},
+  journal={arXiv preprint arXiv:2411.04989},
+  year={2024},
+  abbr={arXiv},
+  thumbnail={arxiv2024namekata.gif},
+  code={https://github.com/Kmcode1/SG-I2V},
+  html={https://kmcode1.github.io/Projects/SG-I2V/},
+  pdf={https://arxiv.org/abs/2411.04989}
+}
+
+@article{bahmani2024ac3d,
+  title={{AC3D}: Analyzing and Improving {3D} Camera Control in Video Diffusion Transformers},
+  author={Bahmani, Sherwin and Skorokhodov, Ivan and Qian, Guocheng and Siarohin, Aliaksandr and Menapace, Willi and Tagliasacchi, Andrea and Lindell, David B and Tulyakov, Sergey},
+  journal={arXiv preprint arXiv:2411.18673},
+  year={2024},
+  abbr={arXiv},
+  thumbnail={arxiv2024bahmani2.gif},
+  html={https://snap-research.github.io/ac3d/},
+  pdf={https://arxiv.org/abs/2411.18673}
+}
+
+@article{verma2024chromaflash,
+  title={ChromaFlash: Snapshot Hyperspectral Imaging Using Rolling Shutter Cameras},
+  author={Verma, Dhruv and Ruffolo, Ian and Lindell, David B and Kutulakos, Kiriakos N and Mariakakis, Alex},
+  journal={IMWUT},
+  volume={8},
+  number={3},
+  pages={1--31},
+  year={2024},
+  publisher={ACM New York, NY, USA},
+  abbr={UbiComp},
+  thumbnail={imwut2024verma.jpg},
+  pdf={https://dhruv-verma.com/docs/ChromaFlash_ACM_IMWUT_2024.pdf}
+}
+
+@inproceedings{rong2024gstex,
+  title={{GStex}: Per-primitive texturing of {2D Gaussian} splatting for decoupled appearance and geometry modeling},
+  author={Rong, Victor and Chen, Jingxiang and Bahmani, Sherwin and Kutulakos, Kiriakos N. and Lindell, David B},
+  booktitle={WACV},
+  year={2024},
+  abbr={WACV},
+  thumbnail={wacv2025rong.png},
+  code={https://github.com/victor-rong/GStex},
+  html={https://lessvrong.com/cs/gstex/},
+  pdf={https://arxiv.org/abs/2409.12954}
+}
+
+@inproceedings{luo2024transientangelo,
+  title={Transientangelo: Few-Viewpoint Surface Reconstruction Using Single-Photon Lidar},
+  author={Luo, Weihan and Malik, Anagh and Lindell, David B},
+  booktitle={WACV},
+  year={2024},
+  abbr={NeurIPS},
+  thumbnail={wacv2025luo.png},
+  code={https://github.com/weihan1/transientangelo},
+  html={https://weihan1.github.io/transientangelo/},
+  pdf={https://arxiv.org/abs/2408.12191}
+}
+
+@inproceedings{shekarforoush2024improving,
+  title={CryoSPIN: Improving Ab-Initio Cryo-EM Reconstruction with Semi-Amortized Pose Inference},
+  author={Shekarforoush, Shayan and Lindell, David B and Brubaker, Marcus A and Fleet, David J},
+  booktitle={NeurIPS},
+  year={2024},
+  abbr={NeurIPS},
+  thumbnail={arxiv2024shekarforoush.png},
+  code={https://github.com/shekshaa/semi-amortized-cryoem},
+  html={https://shekshaa.github.io/semi-amortized-cryoem},
+  pdf={https://arxiv.org/abs/2406.10455}
+}
+
+@article{bahmani2024vd3d,
+  title={VD3D: Taming Large Video Diffusion Transformers for 3D Camera Control},
+  author={Bahmani, Sherwin and Skorokhodov, Ivan and Siarohin, Aliaksandr and Menapace, Willi and Qian, Guocheng and Vasilkovsky, Michael and Lee, Hsin-Ying and Wang, Chaoyang and Zou, Jiaxu and Tagliasacchi, Andrea and Lindell, David B and Tulyakov, Sergey},
+  journal={arXiv preprint arXiv:2407.12781},
+  year={2024},
+  thumbnail={arxiv2024bahmani-2.gif},
+  pdf={https://arxiv.org/abs/2407.12781},
+  html={https://snap-research.github.io/vd3d/},
+}
+
 
 @inproceedings{bahmani20234d,
   abbr={CVPR},
