--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,12 +1,50 @@
 ---
 ---
 
+@inproceedings{nousias2025opportunistic,
+  title={Opportunistic Single-Photon Time of Flight},
+  author={Nousias, Sotiris and Wei, Mian and Xiao, Howard and Wu, Maxx and Athar, Shahmeer and Wang, Kevin J and Malik, Anagh and Barmherzig, David A and Lindell, David B and Kutulakos, Kyros},
+  booktitle={IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+  year={2025},
+  thumbnail={cvpr2025nousias.png},
+  html={https://www.dgp.toronto.edu/projects/opportunistic/},
+  pdf={https://www.dgp.toronto.edu/projects/opportunistic/static/docs/paper.pdf},
+  selected={true},
+  note={Oral Presentation}
+}
+
+@inproceedings{malik2025neural,
+  title={Neural Inverse Rendering from Propagating Light},
+  author={Malik Anagh and Attal, Benjamin and Xie, Andrew and O'Toole, Matthew and Lindell, David B},
+  booktitle={IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+  year={2025},
+  thumbnail={cvpr2025malik.png},
+  html={https://anaghmalik.com/InvProp/},
+  pdf={https://www.arxiv.org/abs/2506.05347},
+  selected={true},
+  note={Best Student Paper Award}
+}
+
+@inproceedings{taubner2024cap4d,
+  title={{CAP4D}: Creating Animatable {4D} Portrait Avatars with Morphable Multi-View Diffusion Models},
+  author={Taubner, Felix and Zhang, Ruihang and Tuli, Mathieu and Lindell, David B},
+  booktitle={CVPR},
+  year={2025},
+  abbr={CVPR},
+  thumbnail={cvpr2025taubner.png},
+  html={https://felixtaubner.github.io/cap4d/},
+  pdf={https://arxiv.org/abs/2412.12093},
+  code={https://github.com/felixtaubner/cap4d/},
+  selected={true},
+  note={Oral Presentation}
+}
+
 @inproceedings{mirdehghan2024coherent,
-  abbr={SIGGRAPH Asia},
   title={Coherent Optical Modems for Full-Wavefield Lidar},
   author={Mirdehghan, Parsa and Buscaino, Brandon and Wu, Maxx and Charlton, Doug and Mousa-Pasandi, Mohammad E and Kutulakos, Kiriakos N and Lindell, David B},
   booktitle={SIGGRAPH Asia},
   year={2024},
+  abbr={SIGGRAPH Asia},
   thumbnail={arxiv2024mirdehghan.png},
   html={https://www.dgp.toronto.edu/fullwavefieldlidar},
   pdf={https://arxiv.org/abs/2406.08439},
@@ -39,28 +77,38 @@
   code={https://github.com/sherwinbahmani/tc4d}
 }
 
+@inproceedings{bahmani2024ac3d,
+  title={{AC3D}: Analyzing and Improving {3D} Camera Control in Video Diffusion Transformers},
+  author={Bahmani, Sherwin and Skorokhodov, Ivan and Qian, Guocheng and Siarohin, Aliaksandr and Menapace, Willi and Tagliasacchi, Andrea and Lindell, David B and Tulyakov, Sergey},
+  booktitle={CVPR},
+  year={2025},
+  abbr={CVPR},
+  thumbnail={arxiv2024bahmani2.gif},
+  html={https://snap-research.github.io/ac3d/},
+  pdf={https://arxiv.org/abs/2411.18673}
+}
 
-@article{namekata2024sg,
+@inproceedings{namekata2025sg,
   title={{SG-I2V}: Self-guided trajectory control in image-to-video generation},
   author={Namekata, Koichi and Bahmani, Sherwin and Wu, Ziyi and Kant, Yash and Gilitschenski, Igor and Lindell, David B},
-  journal={arXiv preprint arXiv:2411.04989},
-  year={2024},
-  abbr={arXiv},
+  booktitle={ICLR},
+  year={2025},
+  abbr={ICLR},
   thumbnail={arxiv2024namekata.gif},
   code={https://github.com/Kmcode1/SG-I2V},
   html={https://kmcode1.github.io/Projects/SG-I2V/},
   pdf={https://arxiv.org/abs/2411.04989}
 }
 
-@article{bahmani2024ac3d,
-  title={{AC3D}: Analyzing and Improving {3D} Camera Control in Video Diffusion Transformers},
-  author={Bahmani, Sherwin and Skorokhodov, Ivan and Qian, Guocheng and Siarohin, Aliaksandr and Menapace, Willi and Tagliasacchi, Andrea and Lindell, David B and Tulyakov, Sergey},
-  journal={arXiv preprint arXiv:2411.18673},
-  year={2024},
-  abbr={arXiv},
-  thumbnail={arxiv2024bahmani2.gif},
-  html={https://snap-research.github.io/ac3d/},
-  pdf={https://arxiv.org/abs/2411.18673}
+@inproceedings{bahmani2024vd3d,
+  title={VD3D: Taming Large Video Diffusion Transformers for 3D Camera Control},
+  author={Bahmani, Sherwin and Skorokhodov, Ivan and Siarohin, Aliaksandr and Menapace, Willi and Qian, Guocheng and Vasilkovsky, Michael and Lee, Hsin-Ying and Wang, Chaoyang and Zou, Jiaxu and Tagliasacchi, Andrea and Lindell, David B and Tulyakov, Sergey},
+  booktitle={ICLR},
+  abbr={ICLR},
+  year={2025},
+  thumbnail={arxiv2024bahmani-2.gif},
+  pdf={https://arxiv.org/abs/2407.12781},
+  html={https://snap-research.github.io/vd3d/},
 }
 
 @article{verma2024chromaflash,
@@ -77,11 +125,11 @@
   pdf={https://dhruv-verma.com/docs/ChromaFlash_ACM_IMWUT_2024.pdf}
 }
 
-@inproceedings{rong2024gstex,
+@inproceedings{rong2025gstex,
   title={{GStex}: Per-primitive texturing of {2D Gaussian} splatting for decoupled appearance and geometry modeling},
   author={Rong, Victor and Chen, Jingxiang and Bahmani, Sherwin and Kutulakos, Kiriakos N. and Lindell, David B},
   booktitle={WACV},
-  year={2024},
+  year={2025},
   abbr={WACV},
   thumbnail={wacv2025rong.png},
   code={https://github.com/victor-rong/GStex},
@@ -89,12 +137,12 @@
   pdf={https://arxiv.org/abs/2409.12954}
 }
 
-@inproceedings{luo2024transientangelo,
+@inproceedings{luo2025transientangelo,
   title={Transientangelo: Few-Viewpoint Surface Reconstruction Using Single-Photon Lidar},
   author={Luo, Weihan and Malik, Anagh and Lindell, David B},
   booktitle={WACV},
-  year={2024},
-  abbr={NeurIPS},
+  year={2025},
+  abbr={WACV},
   thumbnail={wacv2025luo.png},
   code={https://github.com/weihan1/transientangelo},
   html={https://weihan1.github.io/transientangelo/},
@@ -111,16 +159,6 @@
   code={https://github.com/shekshaa/semi-amortized-cryoem},
   html={https://shekshaa.github.io/semi-amortized-cryoem},
   pdf={https://arxiv.org/abs/2406.10455}
-}
-
-@article{bahmani2024vd3d,
-  title={VD3D: Taming Large Video Diffusion Transformers for 3D Camera Control},
-  author={Bahmani, Sherwin and Skorokhodov, Ivan and Siarohin, Aliaksandr and Menapace, Willi and Qian, Guocheng and Vasilkovsky, Michael and Lee, Hsin-Ying and Wang, Chaoyang and Zou, Jiaxu and Tagliasacchi, Andrea and Lindell, David B and Tulyakov, Sergey},
-  journal={arXiv preprint arXiv:2407.12781},
-  year={2024},
-  thumbnail={arxiv2024bahmani-2.gif},
-  pdf={https://arxiv.org/abs/2407.12781},
-  html={https://snap-research.github.io/vd3d/},
 }
 
 
