--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,28 +1,28 @@
 ---
 ---
 
-@inproceedings{nousias2025opportunistic,
-  title={Opportunistic Single-Photon Time of Flight},
-  author={Nousias, Sotiris and Wei, Mian and Xiao, Howard and Wu, Maxx and Athar, Shahmeer and Wang, Kevin J and Malik, Anagh and Barmherzig, David A and Lindell, David B and Kutulakos, Kyros},
-  booktitle={IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
-  year={2025},
-  thumbnail={cvpr2025nousias.png},
-  html={https://www.dgp.toronto.edu/projects/opportunistic/},
-  pdf={https://www.dgp.toronto.edu/projects/opportunistic/static/docs/paper.pdf},
-  selected={true},
-  note={Oral Presentation}
-}
-
 @inproceedings{malik2025neural,
   title={Neural Inverse Rendering from Propagating Light},
   author={Malik Anagh and Attal, Benjamin and Xie, Andrew and O'Toole, Matthew and Lindell, David B},
-  booktitle={IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+  booktitle={CVPR},
   year={2025},
   thumbnail={cvpr2025malik.png},
   html={https://anaghmalik.com/InvProp/},
   pdf={https://www.arxiv.org/abs/2506.05347},
   selected={true},
   note={Best Student Paper Award}
+}
+
+@inproceedings{nousias2025opportunistic,
+  title={Opportunistic Single-Photon Time of Flight},
+  author={Nousias, Sotiris and Wei, Mian and Xiao, Howard and Wu, Maxx and Athar, Shahmeer and Wang, Kevin J and Malik, Anagh and Barmherzig, David A and Lindell, David B and Kutulakos, Kyros},
+  booktitle={CVPR},
+  year={2025},
+  thumbnail={cvpr2025nousias.png},
+  html={https://www.dgp.toronto.edu/projects/opportunistic/},
+  pdf={https://www.dgp.toronto.edu/projects/opportunistic/static/docs/paper.pdf},
+  selected={true},
+  note={Oral Presentation}
 }
 
 @inproceedings{taubner2024cap4d,
