--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @inproceedings{malik2025neural,
   title={Neural Inverse Rendering from Propagating Light},
-  author={Malik Anagh and Attal, Benjamin and Xie, Andrew and O'Toole, Matthew and Lindell, David B},
+  author={Malik, Anagh and Attal, Benjamin and Xie, Andrew and O'Toole, Matthew and Lindell, David B},
   booktitle={CVPR},
   year={2025},
   thumbnail={cvpr2025malik.png},
